--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -7,6 +7,7 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
+build = "mojo build hunter_copy.mojo"
 
 [dependencies]
 max = ">=24.5.0,<25"
