--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,12 +4,11 @@ channels = ["conda-forge", "https://conda.modular.com/max"]
 description = "Add a short description here"
 name = "hunter_copy"
 platforms = ["linux-64"]
-version = "0.1.0"
+version = "0.1.3"
 
 [tasks]
 test = "mojo hunter_copy.mojo test/query.csv test/search test/found"
-build = "mojo build hunter_copy.mojo -o dist/hunter_copy"
-
+build = "mojo build hunter_copy.mojo -o dist/hunter_copy;cd dist; sha256sum hunter_copy > sha256sum.hunter_copy.txt"
 
 [dependencies]
-max = ">=24.6.0,<25"
+max = ">=25.1.0,<26"
